--- a/README.rdoc
+++ b/README.rdoc
@@ -26,3 +26,15 @@ Things you may want to cover:
 
 Please feel free to use a different markup language if you do not plan to run
 <tt>rake doc:app</tt>.
+
+
+== MEMO
+
+First run :
+<tt>rake db:migrate</tt>
+
+Annotation :
+	* -1 non annoté
+	* 0  négatif
+	* 1  neutre
+	* 2  positif
